// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Heading Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <h3
      class="sc-ciZhAO btUqKl sc-jdAMXn iwAvbM"
    >
      Heading h3
    </h3>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 1 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <h1
      class="sc-ciZhAO btUqKl sc-bZnhIo lpvFVg"
    >
      Heading h1
    </h1>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 2 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <h2
      class="sc-ciZhAO btUqKl sc-iTONeN kZBtbJ"
    >
      Heading h2
    </h2>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 3 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <h3
      class="sc-ciZhAO btUqKl sc-iAvgwm iVTgLU"
    >
      Heading h3
    </h3>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 4 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <h4
      class="sc-ciZhAO iJFBxw sc-efBctP kDkMSi"
    >
      Heading h4
    </h4>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 5 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <h5
      class="sc-ciZhAO iJFBxw sc-cTQhss dOQXsM"
    >
      Heading h5
    </h5>
  </div>
</div>
`;
